src/test/deca/context/invalid/renduInter/05-wrong-type-assign-bool-float.deca
{
boolean x = true;
float y = 4.0;
x = y;
}